...
            if (state.value != TextFieldValue("")) {
                IconButton(
                    onClick = {
                        state.value =
                            TextFieldValue("") // Remove text from TextField when you press the 'X' icon
                    },
                    modifier = Modifier.testTag("EMPTY_SEARCH_BUTTON")
                ) {
                    Icon(
                        Icons.Default.Close,
                        contentDescription = "Delete search",
                        modifier = Modifier
                            .padding(15.dp)
...
